# taurent

./: .eslintrules-color-tokens.js  .eslintrules-spacing-scale.js  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  codemap.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: beta_test_report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  pr-ci.yml  release-build.yml
apps/: README.md  codemap.md
apps/desktop/: README.md  codemap.md  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  tsconfig.shared.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: add-server-flow.spec.ts  add-torrent.spec.ts  bootstrap.spec.ts  codemap.md  desktop.spec.ts  dialog-host.spec.ts  sync-backend.spec.ts  torrent-commands.spec.ts  updater.spec.ts  utility-windows.spec.ts
apps/desktop/e2e/helpers/: codemap.md  desktop.ts
apps/desktop/scripts/: codemap.md
apps/desktop/scripts/dev/: codemap.md  tauri-dev.mjs
apps/desktop/scripts/e2e/: codemap.md  helpers.ts  infrastructure.test.ts  infrastructure.ts  runner.ts  tsconfig.json  wait.ts  webdriver.ts
apps/desktop/scripts/icons/: sync-tray-rgba.mjs
apps/desktop/scripts/perf/: check-bundle.ts  codemap.md  common.ts  compare-baseline.ts  write-baseline.ts
apps/desktop/scripts/testing/: codemap.md  fake-qbittorrent.ts
apps/desktop/src/: App.tsx  buildMetadata.ts  codemap.md  index.css  main.tsx  queryClient.ts  settings-index.html  settings-main.tsx
apps/desktop/src-tauri/: Cargo.toml  codemap.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: codemap.md  default.json
apps/desktop/src-tauri/entitlements/: desktop.desktop.entitlements
apps/desktop/src-tauri/icons/: icon.icns  tray-template.rgba
apps/desktop/src-tauri/src/: codemap.md  download_completion_notifications.rs  lib.rs  tray.rs
apps/desktop/src-tauri/src/commands/: app.rs  categories.rs  codemap.md  menu.rs  mod.rs  preferences.rs  servers.rs  tags.rs  torrents.rs  transfer.rs
apps/desktop/src/__tests__/: delta-embedding.test.tsx
apps/desktop/src/auth/: AuthBoundary.tsx  codemap.md
apps/desktop/src/components/: AppUpdateBanner.tsx  DragDropOverlay.tsx  RootErrorBoundary.tsx  TorrentContextMenu.tsx  codemap.md
apps/desktop/src/connection/: QBClientProvider.tsx  ServerManager.tsx  codemap.md  index.ts  serverManagerBindings.tsx  sessionAdapter.ts  useQBClientHooks.ts  useServerManager.ts
apps/desktop/src/contexts/: SearchFocusContext.ts  (+4 more)
apps/mobile/: codemap.md  index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/mobile/e2e/: add-torrent.spec.ts  bootstrap.spec.ts  codemap.md  home.spec.ts  rss.spec.ts  search.spec.ts  settings.spec.ts
apps/mobile/src/: App.tsx  codemap.md  index.css  main.tsx
apps/mobile/src-tauri/: Cargo.toml  codemap.md  tauri.conf.json
apps/mobile/src-tauri/capabilities/: codemap.md  default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: codemap.md  lib.rs  main.rs  torrents.rs
crates/: README.md  codemap.md
crates/qb-core/: Cargo.toml  build.rs  codemap.md
crates/qb-core/capabilities/: qbittorrent-capabilities.toml
crates/qb-core/src/: capability.rs  client.rs  codemap.md  dto.rs  error.rs  lib.rs  normalize.rs  server.rs  session.rs  tests.rs
crates/qb-core/src/capability/: codemap.md  mod.rs  resolved.rs  resolver.rs  version.rs
crates/qb-core/src/sync/: accumulator.rs  codemap.md  health.rs  mod.rs
crates/qb-core/src/workspace/: codemap.md  facets.rs  filter.rs  fixture.rs  mod.rs  sort.rs  tests.rs  view.rs
crates/qb-core/tests/: workspace_parity.rs
crates/qb-core/tests/fixtures/: workspace_parity_golden.json
crates/qb-tauri/: Cargo.toml  codemap.md
crates/qb-tauri/src/: app_builder.rs  client.rs  codemap.md  error.rs  lib.rs  magnet_links.rs  server_repo.rs  session.rs  workspace.rs
crates/qb-tauri/src/commands/: app.rs  categories.rs  codemap.md  mod.rs  preferences.rs  servers.rs  session.rs  sync.rs  tags.rs  torrents.rs  transfer.rs
crates/qb-tauri/src/sync/: codemap.md  events.rs  lifecycle.rs  manager.rs  mod.rs  registry.rs
docs/: RELEASE_CHECKLIST.md
docs/plans/: capability-profile-system.md
packaging/: codemap.md
packaging/flatpak/: README.md  com.taurent.desktop.desktop  com.taurent.desktop.metainfo.xml
scripts/: codemap.md  version-app.mjs  version-app.test.mjs
scripts/ci/: check-versions.mjs  codemap.md  runs-coverage.sh  write-pr-ci-summary.mjs  write-pr-ci-summary.test.mjs
scripts/codegen/: capabilities.mjs  capabilities.test.mjs
scripts/release/: build-flatpak-bundle.mjs  codemap.md  prepare-release-assets.mjs  prepare-release-assets.test.mjs
(+222 files in other folders)
