[package]
name = "qb-tauri"
version = "0.1.0"
authors = ["racos.dev"]
edition = "2021"
rust-version = "1.90.0"
repository = "https://github.com/racos-dev/taurent"
publish = false

[lib]
name = "qb_tauri"
path = "src/lib.rs"

[features]
default = []
desktop = ["dep:tauri-plugin-clipboard-manager", "dep:tauri-plugin-window-state", "dep:tauri-plugin-dialog", "dep:tauri-plugin-shell", "dep:tauri-plugin-opener", "dep:tauri-plugin-deep-link"]
mobile = ["dep:tauri-plugin-fs", "dep:tauri-plugin-dialog", "dep:tauri-plugin-deep-link", "dep:tauri-plugin-shell"]

[dependencies]
log = "0.4"
qb-core = { path = "../qb-core" }
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-store = "2.4.3"
tauri-plugin-http = { version = "2.5.9", features = ["unsafe-headers"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = { version = "2.3.2", optional = true }
tauri-plugin-window-state = { version = "2.4.1", optional = true }
tauri-plugin-fs = { version = "2.5.1", optional = true }
tauri-plugin-dialog = { version = "2.7.1", optional = true }
tauri-plugin-deep-link = { version = "2.4.9", optional = true }
tauri-plugin-shell = { version = "2.3.5", optional = true }
tauri-plugin-opener = { version = "2.5.4", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
tauri-plugin-secure-storage = "1.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3.7", features = ["OSX_10_15"] }
