[package]
name = "taurent"
version = "1.0.0"
description = "Taurent"
authors = ["racos.dev"]
license = "MIT"
repository = "https://github.com/racos-dev/taurent"
edition = "2021"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-store = "2.4.3"
tauri-plugin-http = { version = "2.5.9", features = ["unsafe-headers"] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.4"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-secure-storage = "1.5.0"
tauri-plugin-autostart = "2.5.1"
qb-core = { path = "../../../crates/qb-core" }
qb-tauri = { path = "../../../crates/qb-tauri", features = ["desktop"] }
urlencoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tauri-plugin-webdriver = { version = "0.2.1", optional = true }

[features]
webdriver = ["tauri-plugin-webdriver"]
